fixed spacing in tag pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -342,7 +342,11 @@ postamble a:visited {
 }
 .footer .twitter-follow-button{
   width: 75px !important;
-}     
+}
+
+#post #tag {
+  margin-bottom: 0;
+}
 
 /*
  
